# Delta_Robot_Sim_Open

./: .gitignore  CMakeLists.txt  COMPLETE_SOLUTION.md  HARDWARE_INTEGRATION.md  NEMA23_IMPLEMENTATION.md  NUCLEO_FIRMWARE_OUTLINE.md  NUCLEO_MIGRATION_SUMMARY.md  NUCLEO_SETUP.md  PROJECT_OVERVIEW.md  PROTOCOL_DESIGN.md  PROTOCOL_VERIFICATION.md  README.md  REAL_WORLD_STATUS.md  SEQUENCE_PACKET_IMPLEMENTATION.md  SOFTWARE_ARCHITECTURE.md  TEENSY_FIRMWARE_OUTLINE.md  TEENSY_SETUP.md  TWINCAT_TEST_SETUP.md  build.bat  build.sh  imgui.ini  setup_dependencies.bat  setup_dependencies.sh
DOCS/: TwinCAT_ADS-DLL_C_EN.txt
config/: robot_config.json
include/: ADSInterface.hpp  DeltaRobot.hpp  DeltaRobotProtocol.hpp  HardwareInterface.hpp  MotorControl.hpp  Renderer.hpp  SequenceController.hpp  UIPanels.hpp
nucleo_firmware/: DeltaRobot_NUCLEO.c
src/: ADSInterface.cpp  ControlPanel.cpp  DeltaRobot.cpp  DeltaRobotProtocol.cpp  DisplayPanel.cpp  HardwareInterface.cpp  HardwarePanel.cpp  MotorControl.cpp  Renderer.cpp  RobotSetupPanel.cpp  SequenceController.cpp  SequencePanel.cpp  UIManager.cpp  WaypointPanel.cpp  main.cpp
src/kinematics/: DeltaRobot.cpp
src/visualization/: Renderer.cpp
teensy_firmware/: DeltaRobot_Teensy.ino
